test/files/neg/t7289.check
t7289.scala:8: error: could not find implicit value for parameter e: Test.Schtroumpf[Nil.type]
  implicitly[Schtroumpf[Nil.type]]
            ^
1 error
